# AndroidLibLoadingTest

./: .gitignore  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/plugintest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/plugintest/: MainActivity.kt  MainActivity2.kt  MainActivity3.kt  MainActivity4.kt  Native.kt
app/src/main/java/com/example/plugintest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs
app/src/main/rust1/: Cargo.toml
app/src/main/rust1/src/: lib.rs
app/src/main/rust2/: Cargo.toml
app/src/main/rust2/src/: lib.rs
app/src/test/java/com/example/plugintest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
