[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.14.1"
jni = "0.21.1"
libloading = "0.8.5"
log = "0.4.22"
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
log-panics = { version = "2", features = ["with-backtrace"]}
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }

